Bug 466824 - Kate session applet doesn't notice new sessions until it's restarted
Summary: Kate session applet doesn't notice new sessions until it's restarted
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Kate Sessions (other bugs)
Version First Reported In: 5.27.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-04 12:42 UTC by Paul Worrall
Modified: 2023-05-04 11:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2023-03-04 12:42:40 UTC
STEPS TO REPRODUCE
1. Enable the "Kate Sessions" entry in the system tray
2.  Create a new session in Kate
3.  Save it
4.  Exit Kate
5. Click on "Kate Sessions" in the system tray

OBSERVED RESULT
The new session is not listed

EXPECTED RESULT
The new session is listed

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.27
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Graphics Platform: Wayland

ADDITIONAL INFORMATION
The new session is listed when the applet is next started (e.g. next login)
Comment 1 Paul Worrall 2023-03-04 13:38:26 UTC
For info: New Konsole profiles appear immediately in the Konsole Profiles applet
Comment 2 Bug Janitor Service 2023-03-04 18:27:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/345
Comment 3 Alexander Lohnau 2023-05-04 11:06:49 UTC
Git commit e5d1cafd9a881c6b508f9387ed991eb97d38cbc2 by Alexander Lohnau.
Committed on 04/05/2023 at 07:34.
Pushed by alex into branch 'master'.

ProfilesModel: Adjust to kate using different folder for storing sessions than konsole

M  +7    -3    profiles/profilesmodel.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/e5d1cafd9a881c6b508f9387ed991eb97d38cbc2
Comment 4 Alexander Lohnau 2023-05-04 11:07:58 UTC
Git commit 6c0b511bd9df98ee896ef7402d9a1bb23ddaab5f by Alexander Lohnau.
Committed on 04/05/2023 at 11:07.
Pushed by alex into branch 'Plasma/5.27'.

ProfilesModel: Adjust to kate using different folder for storing sessions than konsole


(cherry picked from commit e5d1cafd9a881c6b508f9387ed991eb97d38cbc2)

M  +7    -3    profiles/profilesmodel.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/6c0b511bd9df98ee896ef7402d9a1bb23ddaab5f