ProfilesModel: Adjust to kate using different folder for storing sessions than konsole

BUG: 466824


(cherry picked from commit e5d1cafd9a881c6b508f9387ed991eb97d38cbc2)